--- a/index.css
+++ b/index.css
@@ -7,9 +7,6 @@ body {
     margin: 0;
     padding: 0;
     background: rgb(10, 10, 10);
-    color: aliceblue;
-    
-   
 }
 
 .container {
@@ -21,21 +18,29 @@ body {
 }
 
 h1 {
-    font-size: 2.5rem;   
+    font-size: 2.5rem;
+  /* Create the gradient. */
+    background-image: linear-gradient(45deg, #f3ec78, #af4261);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 span {
     font-size: 3.5rem;
     font-family: monospace;
-    margin: 25px 5px;
+    margin: 25px 0;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(45deg, #0880f0ab, #dae4acc2);
 }
 
 button {
+    background-image: linear-gradient(45deg, #f3ec78, #af4261);
     padding: 10px 20px;
     margin: 20px 5px;
     font-size: 1.2rem;
-    border: 1px solid white;
-    border-radius: 3px;
+    border: 1px solid rgb(10, 10, 10);
+    border-radius: 4px;
     cursor: pointer;
 }
 
