--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 body {
@@ -18,8 +18,7 @@ body {
 }
 
 h1 {
-    font-size: 2.5rem;
-  /* Create the gradient. */
+    font-size: 3rem;
     background-image: linear-gradient(45deg, #f3ec78, #af4261);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -28,6 +27,7 @@ h1 {
 span {
     font-size: 3.5rem;
     font-family: monospace;
+    font-weight: bold;
     margin: 25px 0;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -38,7 +38,9 @@ button {
     background-image: linear-gradient(45deg, #f3ec78, #af4261);
     padding: 10px 20px;
     margin: 20px 5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.2rem;
+    font-weight: bold;
     border: 1px solid rgb(10, 10, 10);
     border-radius: 4px;
     cursor: pointer;
@@ -57,6 +59,7 @@ button {
 }
 
 #reset-btn:hover {
-    background: yellow;
-    border: 1px solid yellow;
+    background: rgba(200, 175, 45, 0.75);
+    color: wheat;
+    border: 1px solid rgba(200, 175, 45, 0.75);
 }
